--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-node_modules
-dist
-.DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+# Node deps
+node_modules/
+# Vite build output
+dist/
+# Env files with secrets
+*.env
+.env.local
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+# OS files
+.DS_Storeserver/credentials.json
+
